--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -2,6 +2,7 @@
 
 {% set pageTitle = title %}
 {% set pageImage = imgCover %}
+{% set pageDesc = '' %}
 {#https://coxpi.draftium.site/#}
 
 {% block content %}
