Test header DSO page

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -15,6 +15,7 @@
     data-geojson-dso="{{ geojsonDso }}"
   >
   </div>
+  <div>{{ 'astrobin.message'|trans }}</div>
 {% endblock %}
 
 {% block javascripts %}
