--- a/assets/css/components/BandeauHeader.scss
+++ b/assets/css/components/BandeauHeader.scss
@@ -1,6 +1,6 @@
 .AppHeader {
   &__background {
-    height: 300px;
+    height: 400px;
   }
 
   &__LazyBackgroundImage {
@@ -8,12 +8,13 @@
   }
 
   &__imgCover {
+    width: 25%;
+    height: auto;
+    max-width: none;
+    max-height: none;
+    display: block;
     position: relative;
-    //width: "100%",
-    //height: "100%",
-    top: 0;
-    left: 0;
-    overflow: hidden;
+    left: 35%; /* WTF ?? */
   }
 }
 
