Add default image for header

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -15,6 +15,7 @@
     data-geojson-dso="{{ geojsonDso }}"
   >
   </div>
+  <div data-dso-map data-geojson-dso="{{ geojsonDso }}" aria-hidden="true"></div>
   <div>{{ 'astrobin.message'|trans }}</div>
 {% endblock %}
 
