--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -13,19 +13,21 @@
     data-title="{{ title }}"
     data-images="{{ images|json_encode }}"
     data-geojson-dso="{{ geojsonDso }}"
+    data-astrobin-msg="{{ 'astrobin.message'|trans }}"
   >
   </div>
   <div data-dso-map data-geojson-dso="{{ geojsonDso }}" aria-hidden="true"></div>
-  <div>{{ 'astrobin.message'|trans }}</div>
 {% endblock %}
 
 {% block javascripts %}
   {{ parent() }}
   {{ encore_entry_script_tags('dso') }}
+  {#{{ encore_entry_script_tags('d3') }}#}
+  {#{{ encore_entry_script_tags('celestial') }}#}
 {% endblock %}
 
-{% block stylesheets %}
-  {{ parent() }}
-  {{ encore_entry_link_tags('celestial') }}
-{% endblock %}
+{#{% block stylesheets %}#}
+  {#{{ parent() }}#}
+  {#{{ encore_entry_link_tags('celestial') }}#}
+{#{% endblock %}#}
 
