Add component Cards

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -14,7 +14,7 @@
     data-images="{{ images|json_encode }}"
     data-geojson-dso="{{ geojsonDso }}"
     data-astrobin-msg="{{ 'astrobin.message'|trans }}"
-    data-dsoByConsst="{{ dso_by_const|json_encode }}"
+    data-dso-const="{{ dso_by_const|json_encode }}"
   >
   </div>
   <div data-dso-map data-geojson-dso="{{ geojsonDso }}" aria-hidden="true"></div>
