Update syle cards

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -9,7 +9,7 @@
 // Components DSO pages
 @import "components/Dso";
 @import "components/BandeauHeader";
-
+@import "components/Cards";
 @import "components/VueFlux";
 
 body {
