--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -14,6 +14,7 @@
     data-images="{{ images|json_encode }}"
     data-geojson-dso="{{ geojsonDso }}"
     data-astrobin-msg="{{ 'astrobin.message'|trans }}"
+    data-title-const="{{ constTitle }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
   >
   </div>
