Add menu left side

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import "components/Header";
+@import "components/LeftSlideMenu";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
