--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -11,6 +11,12 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, .1);
   transition: 0.33s;
 
+  &__barSlideMenu {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__wrap {
     //position: relative;
     //top: 50%;
