--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,9 +47,9 @@
 
       {% block content %}{% endblock %}
 
-      {% block footer %}
-        {{ render(controller('App\\Controller\\LayoutController::footer')) }}
-      {% endblock %}
+      {#{% block footer %}#}
+        {#{{ render(controller('App\\Controller\\LayoutController::footer')) }}#}
+      {#{% endblock %}#}
     {% endblock %}
 
     {% block javascripts %}
