build left menu

--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,5 +1,6 @@
 <div id="appHeader"
  data-home-route="{{ path('homepage') }}"
+ data-menu-side="{{ leftSideMenu|json_encode }}"
  data-route="{{ _route }}"
  data-locales="{{ listLocales|json_encode }}"
  data-currentlocale="{{ currentLocale }}"
