Change component grid

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -11,6 +11,7 @@
 @import "components/Dso";
 @import "components/BandeauHeader";
 @import "components/Cards";
+@import "components/CardsGrid";
 @import "components/VueFlux";
 
 body {
