--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -3,13 +3,13 @@
 {% set constellation = constellation|json_decode %}
 {% set title = constellation.alt %}
 {% set pageTitle = "const_id"|transchoice(0) ~ ' - ' ~ title %}
-{% set pageImage = asset('build/images/const_thumbs/' ~ constellation.id|lower ~ '.jpg') %}
+{% set pageImage = constellation.image %}
 
 {% block content %}
   <div id="appConst"
      data-const-widget
      data-title="{{ title|trans }}"
-     data-imgcover="{{ pageImage }}"
+     data-imgcover="{{ constellation.image }}"
      data-map="{{ constellation.map }}"
      data-list-dso="{{ list_dso|json_encode }}"
      data-link="{{ link_download }}"
