--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -7,7 +7,6 @@ $card: #2B2A34;
 }
 
 
-
 // GRID
 #appGrid main {
   display: grid;
@@ -125,6 +124,76 @@ $card: #2B2A34;
   }
 }
 
+.appGridFilter {
+
+  display: grid;
+  margin: 2em;
+
+  &__filter {
+    margin: auto;
+  }
+
+  &__btn-radio {
+    cursor: pointer;
+    display: inline-block;
+    float: left;
+    -webkit-user-select: none;
+    user-select: none;
+    &:not(:first-child) {
+      margin-left: 20px;
+    }
+    svg {
+      fill: none;
+      vertical-align: middle;
+      circle {
+        stroke-width: 2;
+        stroke: $bgd-grey;
+      }
+      path {
+        stroke: #1ed760;
+        &.inner {
+          stroke-width: 6;
+          stroke-dasharray: 19;
+          stroke-dashoffset: 19;
+        }
+        &.outer {
+          stroke-width: 2;
+          stroke-dasharray: 57;
+          stroke-dashoffset: 57;
+        }
+      }
+    }
+    input {
+      display: none;
+      &:checked + svg path {
+        transition: all .4s ease;
+        &.inner {
+          stroke-dashoffset: 38;
+          transition-delay: .3s;
+        }
+        &.outer {
+          stroke-dashoffset: 0;
+        }
+      }
+    }
+    span {
+      display: inline-block;
+      vertical-align: middle;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .btn-radio {
+      display: block;
+      float: none;
+      &:not(:first-child) {
+        margin-left: 0;
+        margin-top: 15px;
+      }
+    }
+  }
+}
+
 // ANIMATIONS
 @keyframes mouseOver {
   0% {
@@ -168,3 +237,4 @@ $card: #2B2A34;
 .card-enter-active {
   transition: opacity 0.3s ease-in;
 }
+
