--- a/templates/pages/constellations.html.twig
+++ b/templates/pages/constellations.html.twig
@@ -4,11 +4,33 @@
 {% set pageImage = asset('/build/images/constellation_list.jpg') %}
 
 {% block content %}
+
+  {% set tabFilterConstellation = [
+      {
+        value: '1',
+        label: 'hem.all'|trans
+      },
+      {
+        value: 'north',
+        label: 'hem.no'|trans
+      },
+      {
+        value: 'south',
+        label: 'hem.su'|trans
+      },
+      {
+        value: 'zodiac',
+        label: 'hem.zo'|trans
+      }
+    ]
+  %}
+
   <div id="appListConst"
       data-constellations
       data-title-const="{{ 'constId'|transchoice(list_constellation|length) }}"
       data-list-const="{{ list_constellation|json_encode }}"
       data-imgcover="{{ pageImage }}"
+      data-filter="{{ tabFilterConstellation|json_encode }}"
     >
   </div>
 {% endblock %}
