--- a/templates/pages/catalog.html.twig
+++ b/templates/pages/catalog.html.twig
@@ -4,7 +4,7 @@
 {% set pageDesc = '' %}
 
 {% block content %}
-  <div id="appCatalog" data-list-dso
+  <div id="appCatalog" data-catalog-widget
      data-title="{{ 'allCatalog'|trans }}"
      data-list-dso="{{ list_dso|json_encode }}"
      data-count="{{ nb_items }}"
