--- a/templates/pages/catalog.html.twig
+++ b/templates/pages/catalog.html.twig
@@ -6,10 +6,13 @@
 {% block content %}
   <div id="appCatalog" data-catalog-widget
      data-title="{{ 'allCatalog'|trans }}"
+     data-desc="{{ 'filteringList'|trans }}"
      data-list-dso="{{ list_dso|json_encode }}"
-     data-count="{{ nb_items }}"
+     data-list-facets="{{ list_facets|json_encode }}"
+     data-total-dso="{{ 'nbResults'|transchoice(nb_items) }}"
      data-page="{{ current_page }}"
-     data-count-page="{{ nb_pages }}"
+     data-total-page="{{ nb_pages }}"
+
   >
   </div>
 {% endblock %}
