--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -4,6 +4,7 @@
 // Components
 @import "components/Header";
 @import "components/LeftSlideMenu";
+@import "components/Form";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
