--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,9 @@ $bgd-white: #ffffff;
 $bgd-grey: #595959;
 $bgd-light-grey: #f8f8f8;
 
+// Border
+$border-light-grey: #939598;
+
 // Text colors
 $color-text: #e9e9e9;
 $color-text-dark: $bgd-dark;
