--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -19,6 +19,14 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
+    label {
+      padding: 0.5em 0;
+    }
+
+    span {
+      padding-left: 0.3em;
+    }
   }
 
   &__label {
