Fix problem with Locale + fix display default image

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -8,7 +8,7 @@
 {% block content %}
   <div id="appDso"
     data-dso-widget
-    data-imgcover="{{ imgCover }}"
+    data-imgcover="{{ imgCover|default('default') }}"
     data-dso="{{ dso|json_encode }}"
     data-title="{{ title }}"
     data-images="{{ images|json_encode|default({}) }}"
