Add user from astrobin image

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -9,6 +9,7 @@
   <div id="appDso"
     data-dso-widget
     data-imgcover="{{ imgCover|default('default') }}"
+    data-imgcoveruser="{{ imgCoverUser|default('') }}"
     data-dso="{{ dso|json_encode }}"
     data-title="{{ title }}"
     data-images="{{ images|json_encode|default({}) }}"
