Form contact : add error message

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,9 +5,13 @@ $bgd-dark: #3e3d40;
 $bgd-white: #ffffff;
 $bgd-grey: #595959;
 $bgd-light-grey: #f8f8f8;
+$bgd-error: #f8d7da;
+$bgd-success: #d4edda;
 
 // Border
 $border-light-grey: #939598;
+$border-error: #f5c6cb;
+$border-success: #c3e6cb;
 
 // Text colors
 $color-text: #e9e9e9;
