--- a/templates/forms/contact.html.twig
+++ b/templates/forms/contact.html.twig
@@ -1,10 +1,10 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'recaptcha-form'}}) }}
 
   <div class="Form__group">
     {{ form_label(form.firstname) }}
     {{ form_widget(form.firstname) }}
     <small>{{ form_help(form.firstname) }}</small>
-    <div class="Form__error">
+    <div class="Form__input-error">
       {{ form_errors(form.firstname) }}
     </div>
   </div>
@@ -12,19 +12,22 @@
   <div class="Form__group">
     {{ form_label(form.lastname) }}
     {{ form_widget(form.lastname) }}
-    <div class="Form__error">
+    <div class="Form__input-error">
       {{ form_errors(form.lastname) }}
     </div>
   </div>
 
   <div class="Form__group">
     {{ form_widget(form.email) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.email) }}
+    </div>
   </div>
 
   <div class="Form__group">
     {{ form_label(form.country) }}
     {{ form_widget(form.country) }}
-    <div class="Form__error">
+    <div class="Form__input-error">
       {{ form_errors(form.country) }}
     </div>
   </div>
@@ -33,7 +36,7 @@
     {% form_theme form 'forms/extends/radio.html.twig' %}
     {{ form_label(form.topic) }}
     {{ form_widget(form.topic) }}
-    <div class="Form__error">
+    <div class="Form__input-error">
       {{ form_errors(form.topic) }}
     </div>
   </div>
@@ -42,7 +45,7 @@
   <div class="Form__group">
     {{ form_label(form.message) }}
     {{ form_widget(form.message) }}
-    <div class="Form__error">
+    <div class="Form__input-error">
       {{ form_errors(form.message) }}
     </div>
   </div>
@@ -56,9 +59,7 @@
     {{ 'contact.mandatory'|trans }}
   </div>
 
-  <button type="submit" class="Form__submit" id="btn_contact_submit">
-    {{ 'contact.form.submit'|trans }}
-  </button>
+  <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
 
   {{ form_rest(form) }}
 {{ form_end(form) }}
