Fix translation form

--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -13,6 +13,10 @@
     align-self: center;
     font-size: 1.25em;
     margin-bottom: 1.5em;
+
+    &-email {
+      margin-bottom: 0.1em;
+    }
   }
 
   &__list {
