--- a/templates/forms/contact.html.twig
+++ b/templates/forms/contact.html.twig
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div class="Form__group">
+  <div class="Form__group appGridFilter">
     {% form_theme form 'forms/extends/radio.html.twig' %}
     {{ form_label(form.topic) }}
     {{ form_widget(form.topic) }}
