--- a/templates/forms/extends/radio.html.twig
+++ b/templates/forms/extends/radio.html.twig
@@ -1,7 +1,7 @@
 {% block choice_widget  %}
   {#{% spaceless %}#}
     {% if expanded %}
-      <div class="Form__list">
+      <div class="Form__list appGridFilter__filter">
         {% for group_label, choice in choices %}
           {% set child = choice %}
 
