Facets in catalog

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 
 // Background Colors
 $bgd-dark: #3e3d40;
+$bgd-cards: #2B2A34;
 $bgd-white: #ffffff;
 $bgd-grey: #595959;
 $bgd-light-grey: #f8f8f8;
