--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -1,5 +1,3 @@
-$card: #2B2A34;
-
 :root {
   --grid-gap: 30px;
   --grid-min: 175px;
@@ -18,7 +16,7 @@ $card: #2B2A34;
   article {
     counter-increment: rank;
     position: relative;
-    background: $card;
+    background: $bgd-dark; //$bgd-cards;
     box-shadow: 0 1px 5px rgba(0,0,0,0.2);
     border-radius: 4px;
     overflow: hidden;
@@ -200,12 +198,24 @@ $card: #2B2A34;
   }
 
   &__item {
+    font-size: 1em;
+    li {
+      width: 100%;
+    }
      a {
        color: $color-text-dark;
        text-decoration: none;
        cursor: pointer;
-     } 
-    
+     }
+  }
+
+  &__badge {
+    background: $bgd-dark;
+    color: #1ed760;
+    border-radius: 10px;
+    font-size: 0.8em;
+    padding: 0.2em 0.5em;
+    margin-left: 1em;
   }
 }
 
