Add sort by magnitude on list DSO

--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -209,6 +209,13 @@
      }
   }
 
+  &__removeFilter {
+    text-decoration: none;
+    color: $color-text-dark;
+    cursor: pointer;
+    float: right;
+  }
+
   &__badge {
     background: $bgd-dark;
     color: #1ed760;
