Refactoring icons with vue-svgicon

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -1,6 +1,6 @@
 // base
 @import "base/init";
-
+@import "base/Icons";
 // Components
 @import "components/Header";
 @import "components/LeftSlideMenu";
