--- a/templates/pages/catalog.html.twig
+++ b/templates/pages/catalog.html.twig
@@ -9,6 +9,7 @@
      data-desc="{{ 'filteringList'|trans }}"
      data-list-dso="{{ list_dso|json_encode }}"
      data-list-facets="{{ list_facets|json_encode }}"
+     data-selected-filters="{{ filters|json_encode }}"
      data-total-dso="{{ 'nbResults'|transchoice(nb_items) }}"
      data-page="{{ current_page }}"
      data-total-page="{{ nb_pages }}"
