Add Pagination vueJs + order catalof aggregates

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -5,6 +5,7 @@
 @import "components/Header";
 @import "components/LeftSlideMenu";
 @import "components/Form";
+@import "components/Pagination";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
