Fix styling pagination

--- a/assets/css/components/LeftSlideMenu.scss
+++ b/assets/css/components/LeftSlideMenu.scss
@@ -65,7 +65,7 @@
   color: $color-text !important;
 }
 .bm-item-list > * > span {
-  margin-left: 10px;
+  margin-left: 1em !important;
   color: $color-text !important;
   font-weight: 100 !important;
 }
