--- a/assets/css/components/Pagination.scss
+++ b/assets/css/components/Pagination.scss
@@ -15,16 +15,19 @@ $angleActive: 25deg;
   }
 }
 
+.pagination {
+  margin: 5em;
+  text-align: center;
+}
 
 .paginate {
-  border: 1px solid red;
-  margin: -20px 10px 10px 10px;
-  position: absolute;
-  width: $size;
-  height: $size;
+  margin: 10em;
+  width: $sizeI;
+  height: $sizeI;
   cursor: pointer;
   transform: translate3d(0,0,0); // fixes flicker in webkit
   top: 50%;
+  margin-top: -5em;
   -webkit-filter: drop-shadow( 0 2px 0px rgba(0,0,0,0.2) );
 
   i {
@@ -34,8 +37,7 @@ $angleActive: 25deg;
     width: $sizeI;
     height: $thickness;
     border-radius: $thickness / 2;
-    background: $bgd-light-grey;
-
+    background: $bgd-dark;
     transition: all 0.15s ease;
   }
 
@@ -92,18 +94,13 @@ $angleActive: 25deg;
   &[data-state=disabled] {
     opacity: 0.3;
     cursor: default;
+    color: $color-text-dark;
   }
 }
 
-
 .counter {
-  text-align: center;
-  position: absolute;
-  //width: 100%;
-  top: 50%;
-  margin-top: -15px;
   font-size: 30px;
   font-family: Helvetica, sans-serif;
   text-shadow: 0px 2px 0px rgba( 0, 0, 0, 0.2 );
-  color: $color-text;
+  color: $color-text-dark;
 }
