--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i');
+@import "~d3-celestial/celestial.css";
 
 // Background Colors
 $bgd-dark: #3e3d40;
