Fix same labels on views

--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -10,6 +10,7 @@
   <div id="appConst"
      data-const-widget
      data-title="{{ title|trans }}"
+     data-title-map="{{ 'skymap'|trans }}"
      data-desc="{{ constellation.description|raw }}"
      data-imgcover="{{ constellation.image }}"
      data-map="{{ constellation.map }}"
