--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -12,6 +12,8 @@
     data-imgcoveruser="{{ imgCoverUser|default('') }}"
     data-dso="{{ dsoData|json_encode }}"
     data-title="{{ title }}"
+    data-title-map="{{ 'skymap'|trans }}"
+    data-title-gallery="{{ 'galery'|trans }}"
     data-images="{{ images|json_encode|default({}) }}"
     data-astrobin-msg="{{ 'astrobin.message'|trans }}"
     data-title-const="{{ constTitle }}"
