Build legend, refactor and fix

--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -56,5 +56,12 @@
     margin-bottom: 1em;
     min-height: 800px;
   }
+
+  &__map {
+    li {
+      display: inline;
+      padding: 0 0.5em;
+    }
+  }
 }
 
