--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -16,6 +16,7 @@
      data-map="{{ constellation.map }}"
      data-list-dso="{{ list_dso|json_encode }}"
      data-link="{{ link_download }}"
+     data-legend-map="{{ list_types|json_encode }}"
   ></div>
   <div id="geojson" data-dso="{{ geojsonDso|json_encode }}" data-center="{{ centerMap|json_encode }}" data-const="{{ constellation.id }}" data-zoom="5" aria-hidden="true"></div>
 {% endblock %}
