--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% set pageTitle = 'contact.title'|trans %}
+{% set pageDesc = 'contactDesc'|trans %}
 
 {% block content %}
   <div>
