--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
   {% spaceless %}
     {% set pageLang = app.request.locale %}
     {% set pageTitle = 'dso'|trans ~ ' - ' ~ pageTitle|default('') %}
-    {% set pageDesc = 'dso_tr'|trans ~ ' - ' ~ pageDesc|default('') %}
+    {% set pageDesc = pageDesc|default('dso'|trans) %}
     {% set pageUrl = app.request.uri %}
     {% set pageImage = pageImage|default(null) %}
     {% set pageUrlCanonical = app.request.getSchemeAndHttpHost ~ app.request.baseUrl ~ app.request.pathInfo %}
