--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i');
 @import "~d3-celestial/celestial.css";
+@import "~leaflet/dist/leaflet.css";
 
 // Background Colors
 $bgd-dark: #3e3d40;
