--- a/templates/pages/observation.html.twig
+++ b/templates/pages/observation.html.twig
@@ -7,7 +7,7 @@
   <div id="app"
      data-observation-widget
      data-title="{{ observation.name }}"
-     data-description="{{ observation.name }}"
+     data-description="{{ observation.description }}"
      data-coordinates="{{ coordinates|json_encode }}"
      data-list-dso="{{ list_dso|json_encode }}"
   ></div>
