--- a/templates/pages/observation.html.twig
+++ b/templates/pages/observation.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% set pageTitle = observation.name %}
-{% set pageDesc = "" %}
+{% set pageDesc = observation.description %}
 
 {% block content %}
   <div id="app"
      data-observation-widget
      data-title="{{ observation.name }}"
      data-description="{{ observation.description }}"
+
      data-observation="{{ data|json_encode }}"
      data-coordinates="{{ coordinates|json_encode }}"
      data-list-dso="{{ list_dso|json_encode }}"
