Build search autocomplete for observations

--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -11,3 +11,8 @@
   >
   </div>
 {% endblock %}
+
+{% block javascripts %}
+  {{ parent() }}
+  {{ encore_entry_script_tags('observations') }}
+{% endblock %}
