--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -8,6 +8,7 @@
   <div id="app"
      data-observations-list
      data-title="{{ pageTitle }}"
+     data-search-route="{{ path('search_observation_ajax') }}"
   >
   </div>
 {% endblock %}
