--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -6,6 +6,7 @@
 @import "components/LeftSlideMenu";
 @import "components/Form";
 @import "components/Pagination";
+@import "components/Map";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
