--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -9,6 +9,7 @@
      data-observations-list
      data-title="{{ pageTitle }}"
      data-search-route="{{ path('search_observation_ajax') }}"
+{#     data-geojson="{{ geojson }}"#}
   >
   </div>
 {% endblock %}
